--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,7 @@
 [LOF]
 
 # 可在列表中添加想要监控的LOF
-LOFList: [161005, 163402]
+LOFList: [161005, 163402, 162411, 501312, 501300, 161125, 161126, 161127, 161128, 160140, 164824, 161130]
 
 # 微信溢价/折价推送阈值（百分数）
 # 溢价幅度大于等于该参数时提醒
